[gd_scene load_steps=2 format=3 uid="uid://dvc25hgxlvw6u"]

[ext_resource type="Script" uid="uid://b0ymo1jg6thjx" path="res://sources/ui/log_viewer.gd" id="1_r352f"]

[node name="LogViewer" type="AcceptDialog"]
oversampling_override = 1.0
title = "Logs"
size = Vector2i(900, 600)
visible = true
script = ExtResource("1_r352f")

[node name="VBox" type="VBoxContainer" parent="."]
offset_right = 900.0
offset_bottom = 533.0

[node name="Controls" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="LineCountSlider" type="HSlider" parent="VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 20.0
value = 10.0

[node name="SliderLabel" type="Label" parent="VBox/Controls"]
layout_mode = 2
text = "Show: ?"

[node name="Control" type="Control" parent="VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/Controls"]
layout_mode = 2
text = "Change log level:"

[node name="LogLevelDropdown" type="OptionButton" parent="VBox/Controls"]
layout_mode = 2

[node name="LogText" type="TextEdit" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Placeholder Text"
editable = false
context_menu_enabled = false
